      applyFilters()

    o getBinAnnotations() now allows custom bin annotations to be loaded via
      the path parameter even when an annotation package has been installed

    o phenodata files with a single variable are now handled correctly

    o calculateMappability() now retains correct chromosome order even when
      bigWigAverageOverBed reorders them

Changes in version 1.6.0 (2015-10-14)
-------------------------------------

RELEASE

    o Bioconductor 3.2

IMPROVEMENTS

    o chromosomes() no longer tries to return chromosome names as an integer
      vector, but returns a character vector instead

BUG FIXES

    o plot() and calculateMappability() now work also for other chromosome
      names besides numbers and "X", "Y", and "MT"

Changes in version 1.4.2 (2015-08-20)
-------------------------------------

BUG FIXES

    o createBins() now properly selects chromosomes when ignoring 
      mitochondrial DNA. Please note that the mitochondrial DNA is only 
      ignored when it is called either "chrMT", "chrM", "MT", or "M"

Changes in version 1.4.1 (2015-06-30)
-------------------------------------

IMPROVEMENTS

    o correctBins() now filters out bins with missing loess correction estimate

Changes in version 1.4.0 (2015-04-17)
-------------------------------------

RELEASE

    o Bioconductor 3.1

Changes in version 1.2.4 (2015-01-21)
-------------------------------------

OTHER

    o update package maintainer

Changes in version 1.2.3 (2015-01-20)
-------------------------------------

BUG FIXES

    o createBins() now also works for species not supported by GenomeInfoDb
      (such as Canis lupus familiaris)

Changes in version 1.2.2 (2014-12-23)
-------------------------------------

IMPROVEMENTS

    o applyFilters() now ignores the residual filter for chromosomes for which
      it does not exist (instead of always filtering out the entire chromosome)

Changes in version 1.2.1 (2014-11-01)
-------------------------------------
