@@ -1,6 +1,6 @@
 Package: QDNAseq
-Version: 1.7.4
-Date: 2016-02-24
+Version: 1.7.5
+Date: 2016-03-22
 Title: Quantitative DNA sequencing for chromosomal aberrations
 Author: Ilari Scheinin [aut], Daoud Sie [aut, cre], Henrik Bengtsson [aut]
 Maintainer: Daoud Sie <d.sie@vumc.nl>
