@@ -41,6 +41,8 @@ BUG FIXES
     o calculateMappability() now retains correct chromosome order even when
       bigWigAverageOverBed reorders them
 
+    o calculateBlacklist() now correctly handles non-integer chromosome names
+
 Changes in version 1.6.0 (2015-10-14)
 -------------------------------------
 
